# multi-tenant-auth-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2e5397942481_initial_tables_for_auth.py  39fee2d383ab_add_new_field_in_roles_as_is_active.py  4f5eb676bcc6_add_new_field_in_roles_as_is_active.py  739a32a9e710_initial.py  a56e692f812d_added_rbac_and_audit_models.py
app/: main.py
app/api/v1/: api.py
app/api/v1/auth/: routes.py
app/api/v1/health/: routes.py
app/api/v1/tenants/: routes.py
app/api/v1/users/: routes.py
app/core/: config.py  exceptions.py  logging.py  openapi.py  rate_limiter.py
app/domains/audit/: repository.py  schemas.py  service.py
app/domains/auth/: otp_repository.py  schemas.py  service.py
app/domains/rbac/permissions/: repository.py  schemas.py  service.py
app/domains/rbac/roles/: repository.py  schemas.py  service.py
app/domains/roles/: repository.py
app/domains/shared/: repository.py
app/domains/shared/schemas/: pagination.py
app/domains/tenants/: query_params.py  repository.py  schemas.py  service.py
app/domains/users/: repository.py  schemas.py  service.py
app/infrastructure/clients/: redis_client.py
app/infrastructure/db/: base.py  enums.py  mixins.py  session.py
app/infrastructure/db/models/: __init__.py  audit.py  auth_rbac.py  login_attempt.py  tenant.py  (+3 more)
app/middleware/: cors.py  request_context.py
app/security/: hashing.py  permissions.py  tokens.py
scripts/: seed_db.py
(+2 files in other folders)
